[package]
name = "rustintrace"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.28"
clap = { version = "4.4.2", features = ["derive"] }
etherparse = "0.13.0"
pcap = "1.1.0"
pnet = "0.34.0"
